--- a/index.html
+++ b/index.html
@@ -140,41 +140,9 @@
                     <div class="col-md-12">
                         <div class="gp-counter-area">
 
-                            <ul class="gp-counter-nav">
-
-                                <li class="col-md-3 col-sm-3 col-xs-12">
-                                    <div class="gp-single-counter">
-                                        <span>Fresh</span>
-                                        <h3><span class="counter-value" data-count="150">0</span><sup>+</sup></h3>
-                                        <p>Breakfast Items</p>
-                                    </div>
-                                </li>
-
-                                <li class="col-md-3 col-sm-3 col-xs-12">
-                                    <div class="gp-single-counter">
-                                        <span>Delicious</span>
-                                        <h3><span class="counter-value" data-count="60">0</span><sup>+</sup></h3>
-                                        <p>Lunch Items</p>
-                                    </div>
-                                </li>
-
-                                <li class="col-md-3 col-sm-3 col-xs-12">
-                                    <div class="gp-single-counter">
-                                        <span>Hot</span>
-                                        <h3><span class="counter-value" data-count="45">0</span><sup>+</sup></h3>
-                                        <p>Coffee Items</p>
-                                    </div>
-                                </li>
-
-                                <li class="col-md-3 col-sm-3 col-xs-12">
-                                    <div class="gp-single-counter">
-                                        <span>Satisfied</span>
-                                        <h3><span class="counter-value" data-count="6560">0</span><sup>+</sup></h3>
-                                        <p>Customers</p>
-                                    </div>
-                                </li>
-
-                            </ul>
+                            <div class="gp-counter-nav">
+                                „ Sunt mai gustoase decat sunt aratoase. ”
+                            </div>
 
                         </div>
                     </div>
@@ -248,102 +216,6 @@
                                 </div>
                                 <!-- End single gallery image -->
 
-                                <!-- start single gallery image -->
-                                <div class="gp-single-gallery col-md-4">
-                                    <div class="gp-single-gallery-item">
-                                        <figure class="gp-single-gallery-img">
-                                            <a class="gp-imglink" href="assets/img/gallery/4.jpg">
-                                                <img alt="img" src="assets/img/gallery/4.jpg">
-                                                <div class="gp-single-gallery-info">
-                                                    <img class="gp-view-btn" src="assets/img/plus.png"
-                                                        alt="plus icon img">
-                                                </div>
-                                            </a>
-                                        </figure>
-                                    </div>
-                                </div>
-                                <!-- End single gallery image -->
-
-                                <!-- start single gallery image -->
-                                <div class="gp-single-gallery col-md-4">
-                                    <div class="gp-single-gallery-item">
-                                        <figure class="gp-single-gallery-img">
-                                            <a class="gp-imglink" href="assets/img/gallery/5.jpg">
-                                                <img alt="img" src="assets/img/gallery/5.jpg">
-                                                <div class="gp-single-gallery-info">
-                                                    <img class="gp-view-btn" src="assets/img/plus.png"
-                                                        alt="plus icon img">
-                                                </div>
-                                            </a>
-                                        </figure>
-                                    </div>
-                                </div>
-                                <!-- End single gallery image -->
-
-                                <!-- start single gallery image -->
-                                <div class="gp-single-gallery col-md-4">
-                                    <div class="gp-single-gallery-item">
-                                        <figure class="gp-single-gallery-img">
-                                            <a class="gp-imglink" href="assets/img/gallery/6.jpg">
-                                                <img alt="img" src="assets/img/gallery/6.jpg">
-                                                <div class="gp-single-gallery-info">
-                                                    <img class="gp-view-btn" src="assets/img/plus.png"
-                                                        alt="plus icon img">
-                                                </div>
-                                            </a>
-                                        </figure>
-                                    </div>
-                                </div>
-                                <!-- End single gallery image -->
-
-                                <!-- start single gallery image -->
-                                <div class="gp-single-gallery col-md-4">
-                                    <div class="gp-single-gallery-item">
-                                        <figure class="gp-single-gallery-img">
-                                            <a class="gp-imglink" href="assets/img/gallery/7.jpg">
-                                                <img alt="img" src="assets/img/gallery/7.jpg">
-                                                <div class="gp-single-gallery-info">
-                                                    <img class="gp-view-btn" src="assets/img/plus.png"
-                                                        alt="plus icon img">
-                                                </div>
-                                            </a>
-                                        </figure>
-                                    </div>
-                                </div>
-                                <!-- End single gallery image -->
-
-                                <!-- start single gallery image -->
-                                <div class="gp-single-gallery col-md-4">
-                                    <div class="gp-single-gallery-item">
-                                        <figure class="gp-single-gallery-img">
-                                            <a class="gp-imglink" href="assets/img/gallery/8.jpg">
-                                                <img alt="img" src="assets/img/gallery/8.jpg">
-                                                <div class="gp-single-gallery-info">
-                                                    <img class="gp-view-btn" src="assets/img/plus.png"
-                                                        alt="plus icon img">
-                                                </div>
-                                            </a>
-                                        </figure>
-                                    </div>
-                                </div>
-                                <!-- End single gallery image -->
-
-                                <!-- start single gallery image -->
-                                <div class="gp-single-gallery col-md-4">
-                                    <div class="gp-single-gallery-item">
-                                        <figure class="gp-single-gallery-img">
-                                            <a class="gp-imglink" href="assets/img/gallery/9.jpg">
-                                                <img alt="img" src="assets/img/gallery/9.jpg">
-                                                <div class="gp-single-gallery-info">
-                                                    <img class="gp-view-btn" src="assets/img/plus.png"
-                                                        alt="plus icon img">
-                                                </div>
-                                            </a>
-                                        </figure>
-                                    </div>
-                                </div>
-                                <!-- End single gallery image -->
-
                             </div>
                         </div>
                     </div>
@@ -370,17 +242,21 @@
                         <div class="col-md-12 no-padding text-center" style="font-weight: bold; margin-bottom: 16px;">
                             <div class="col-md-4 column-footer">
                                 <h2 style="font-weight: bold;">Program</h2>
+                                <p class="footer-item-md"><a><span><br></span></a></p>
                                 <p><span class="fa fa-clock-o"></span> Zilnic: 10 - 22</p>
                                 <p>Weekend: 10 - 23</p>
                             </div>
                             <div class="col-md-4 column-footer">
                                 <h2 style="font-weight: bold;">Contact</h2>
                                 <p><a href="tel: +40724770007"><span class="fa fa-phone"></span> 0724 77 00 07</a></p>
+                                <p><a href="tel: +40767074848"><span class="fa fa-phone"></span> 0767 07 48 48</a></p>
+                                <p><a href="tel: +40745506699"><span class="fa fa-phone"></span> 0745 50 66 99</a></p>
                                 <p>contact@gardenpizza.ro</p>
                                 <!-- <p><span class="fa fa-envelope-o"></span> contact@gardenpizza.ro</p> -->
                             </div>
                             <div class="col-md-4 column-footer">
                                 <h2 style="font-weight: bold;">Adres&#259;</h2>
+                                <p class="footer-item-md"><a><span><br></span></a></p>
                                 <p><span class="fa fa-map-marker"></span> Str. Viitorului, nr. 24C</p>
                                 <p>(vis-a-vis de Piscina Noa)</p>
                             </div>
