--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul id="top-menu" class="nav navbar-nav navbar-right gp-main-nav">
-                        <li><a href="meniu/pizza.html">Pizza</a></li>
 
+                        <li class="navbar-item-lg"><a href="meniu/pizza.html">Pizza</a></li>
                         <li class="navbar-item-lg">
                             <div class="gp-dropdown">
-                                <a href="meniu.html" class="gp-dropbtn">Meniu</a>
-                                <div class="gp-dropdown-content">
+                                <a class="gp-dropbtn">Meniu</a>
+                                <div class="gp-dropdown-content" style="min-width: 100px;">
                                     <a href="meniu/piadine.html">Piadine</a>
                                     <a href="meniu/salate.html">Salate</a>
                                     <a href="meniu/paste.html">Paste</a>
@@ -67,13 +67,30 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="navbar-item-md"><a href="meniu/piadine.html">Piadine</a></li>
-                        <li class="navbar-item-md"><a href="meniu/salate.html">Salate</a></li>
-                        <li class="navbar-item-md"><a href="meniu/paste.html">Paste</a></li>
-                        <li class="navbar-item-md"><a href="meniu/platouri.html">Platouri</a></li>
+                        <li class="navbar-item-lg"><a href="despre.html">Despre</a></li>
+                        <li class="navbar-item-lg">
+                            <div class="gp-dropdown">
+                                <a class="gp-dropbtn">Sun&#259;-ne</a>
+                                <div class="gp-dropdown-content" style="min-width: 175px;">
+                                    <a href="tel: +40724770007">0724 77 00 07</a>
+                                    <a href="tel: +40767074848">0767 07 48 48</a>
+                                    <a href="tel: +40745506699">0745 50 66 99</a>
+                                </div>
+                            </div>
+                        </li>
 
-                        <li><a href="despre.html">Despre</a></li>
-                        <li><a href="tel: +40724770007">0724 77 00 07</a></li>
+                        <li class="navbar-item-md gp-switch"><a href="meniu/pizza.html">Pizza</a></li>
+                        <li class="navbar-item-md gp-switch"><a href="meniu/piadine.html">Piadine</a></li>
+                        <li class="navbar-item-md gp-switch"><a href="meniu/salate.html">Salate</a></li>
+                        <li class="navbar-item-md gp-switch"><a href="meniu/paste.html">Paste</a></li>
+                        <li class="navbar-item-md gp-switch"><a href="meniu/platouri.html">Platouri</a></li>
+                        <li class="navbar-item-md"><a href="despre.html">Despre</a></li>
+                        <li class="navbar-item-md gp-switch" id="mobile-call"><a>Sun&#259;-ne</a></li>
+                        <li class="navbar-item-md gp-switch-tel" id="mobile-menu"><a>Meniu</a></li>
+                        <li class="navbar-item-md gp-switch-tel"><a href="tel: +40724770007">0724 77 00 07</a></li>
+                        <li class="navbar-item-md gp-switch-tel"><a href="tel: +40767074848">0767 07 48 48</a></li>
+                        <li class="navbar-item-md gp-switch-tel"><a href="tel: +40745506699">0745 50 66 99</a></li>
+                        
                         <!-- <li><a href="#gp-about-us">ABOUT US</a></li> -->
                     </ul>
                 </div>
