--- a/index.html
+++ b/index.html
@@ -99,6 +99,53 @@
     </header>
     <!-- header -->
 
+    <!-- Start slider  -->
+    <section id="gp-slider">
+        <div class="gp-slider-area">
+
+            <!-- Top slider -->
+            <div class="gp-top-slider">
+
+                <div class="gp-top-slider-single">
+                    <img src="assets/img/slider/1.jpeg" alt="img">
+                    <!-- Top slider content -->
+                    <div class="gp-top-slider-content">
+                        <span class="gp-slider-small-title">Bun venit!</span>
+                        <h2 class="gp-slider-title">La noua pizzerie din ora&#351;ul Craiova.</h2>
+                        <p>Viziteaz&#259;-ne sau sun&#259; la unul din numerele de telefon.</p>
+                    </div>
+                    <!-- / Top slider content -->
+                </div>
+
+                <div class="gp-top-slider-single">
+                    <img src="assets/img/slider/2.jpeg" alt="img">
+                    <!-- Top slider content -->
+                    <div class="gp-top-slider-content">
+                        <span class="gp-slider-small-title">Garden</span>
+                        <h2 class="gp-slider-title">O loca&#355;ie retras&#259; &#238;n afara ora&#351;ului.</h2>
+                        <p>Vino s&#259; savurezi preparatele noastre &#238;ntr-un mediu relaxant.</p>
+                    </div>
+                    <!-- / Top slider content -->
+                </div>
+
+                <div class="gp-top-slider-single">
+                    <img src="assets/img/slider/3.jpeg" alt="img">
+                    <!-- Top slider content -->
+                    <div class="gp-top-slider-content">
+                        <span class="gp-slider-small-title">Pizza</span>
+                        <h2 class="gp-slider-title">Un meniu diversificat &#351;i delicios.</h2>
+                        <p>Alege pizza, paste, piadine, salate sau unul din platouri.</p>
+
+                        <!-- <a href="#gp-reservation" class="gp-readmore-btn gp-reservation-btn">BOOK A TABLE</a> -->
+                    </div>
+                    <!-- / Top slider content -->
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <!-- End slider  -->
+
     <!-- Start About us -->
     <section id="gp-about-us">
         <div class="container">
@@ -185,7 +232,6 @@
         </div>
     </section>
 
-    <!-- Start Counter Section -->
     <section id="gp-counter">
         <div class="gp-counter-overlay">
             <div class="container">
@@ -203,9 +249,7 @@
             </div>
         </div>
     </section>
-    <!-- End Counter Section -->
 
-    <!-- Start Gallery -->
     <section id="gp-gallery">
         <div class="container">
             <div class="row">
@@ -276,7 +320,6 @@
             </div>
         </div>
     </section>
-    <!-- End Gallery -->
 
     <!-- google map -->
     <section id="gp-map">
