--- a/index.html
+++ b/index.html
@@ -170,22 +170,12 @@
                                         itaque illum
                                         assumenda repellendus dolorem, dolore numquam totam saepe, porro delectus,
                                         libero enim odio quo.
-                                        Explicabo ex sapiente sit eligendi, facere voluptatum! Quia vero rerum sunt
-                                        porro architecto
-                                        corrupti eaque corporis eum, enim soluta, perferendis dignissimos, repellendus,
-                                        beatae laboriosam.
                                     </p>
                                     <ul>
                                         <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
                                         <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
                                         <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia.</li>
-                                        <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-                                        <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-                                        <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia.</li>
                                     </ul>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque similique
-                                        molestias est quod
-                                        reprehenderit, quibusdam nam qui, quam magnam.</p>
                                 </div>
                             </div>
                         </div>
@@ -196,41 +186,55 @@
     </section>
     <!-- End About us -->
 
-    <section class="cook-delecious">
+    <!-- Start Reservation section -->
+    <section id="gp-reservation">
         <div class="container">
-            <div class="container-fluid">
-                <div class="col-md-3 col-md-offset-1">
-                    <div class="first-image">
-                        <img src="assets/img/cook_01.jpg" alt="">
-                    </div>
-                </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="cook-delecious">
+                        <div class="container">
+                            <div class="container-fluid">
+                                <div class="col-md-3 col-md-offset-1">
+                                    <div class="first-image">
+                                        <img src="assets/img/cook_01.jpg" alt="">
+                                    </div>
+                                </div>
 
-                <div class="col-md-4">
-                    <div class="cook-content">
-                        <h4>
-                            <i class="fa fa-angle-double-right"></i>
-                            Noi g&#259;tim
-                            <i class="fa fa-angle-double-left"></i>
-                        </h4>
-                        <h4>
-                            <i class="fa fa-angle-double-right"></i>
-                            Noi livr&#259;m
-                            <i class="fa fa-angle-double-left"></i>
-                        </h4>
-                        <div class="contact-content">
-                            <h6>Alege ce ai poft&#259;</h6>
+                                <div class="col-md-4">
+                                    <div class="cook-content">
+                                        <h4>
+                                            <i class="fa fa-exclamation" style=""></i>
+                                            <i class="fa fa-exclamation" style=""></i>
+                                            <i class="fa fa-exclamation" style=""></i> Noi g&#259;tim <i
+                                                class="fa fa-exclamation" style=""></i>
+                                            <i class="fa fa-exclamation" style=""></i>
+                                            <i class="fa fa-exclamation" style=""></i>
+                                        </h4>
+                                        <h4>
+                                            <i class="fa fa-taxi"></i>
+                                            Noi livr&#259;m
+                                            <i class="fa fa-taxi"></i>
+                                        </h4>
+                                        <a href="meniu/pizza.html">
+                                            <div class="contact-content">
+                                                <h6>Alege ce ai poft&#259;</h6>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-3">
+                                    <div class="second-image">
+                                        <img src="assets/img/cook_02.jpg" alt="">
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-
-                <div class="col-md-3">
-                    <div class="second-image">
-                        <img src="assets/img/cook_02.jpg" alt="">
-                    </div>
-                </div>
             </div>
-        </div>
     </section>
+    <!-- End Reservation section -->
 
     <section id="gp-counter">
         <div class="gp-counter-overlay">
