--- a/meniu/salate.html
+++ b/meniu/salate.html
@@ -54,12 +54,12 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul id="top-menu" class="nav navbar-nav navbar-right gp-main-nav">
-                        <li><a  href="../meniu/pizza.html">Pizza</a></li>
 
+                        <li class="navbar-item-lg"><a href="../meniu/pizza.html">Pizza</a></li>
                         <li class="navbar-item-lg">
                             <div class="gp-dropdown">
-                                <a href="../meniu.html" class="gp-dropbtn active">Meniu</a>
-                                <div class="gp-dropdown-content">
+                                <a class="gp-dropbtn active">Meniu</a>
+                                <div class="gp-dropdown-content" style="min-width: 100px;">
                                     <a href="../meniu/piadine.html">Piadine</a>
                                     <a class="active">Salate</a>
                                     <a href="../meniu/paste.html">Paste</a>
@@ -67,13 +67,30 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="navbar-item-md"><a href="../meniu/piadine.html">Piadine</a></li>
-                        <li class="navbar-item-md"><a class="active">Salate</a></li>
-                        <li class="navbar-item-md"><a href="../meniu/paste.html">Paste</a></li>
-                        <li class="navbar-item-md"><a href="../meniu/platouri.html">Platouri</a></li>
+                        <li class="navbar-item-lg"><a href="../despre.html">Despre</a></li>
+                        <li class="navbar-item-lg">
+                            <div class="gp-dropdown">
+                                <a class="gp-dropbtn">Sun&#259;-ne</a>
+                                <div class="gp-dropdown-content" style="min-width: 175px;">
+                                    <a href="tel: +40724770007">0724 77 00 07</a>
+                                    <a href="tel: +40767074848">0767 07 48 48</a>
+                                    <a href="tel: +40745506699">0745 50 66 99</a>
+                                </div>
+                            </div>
+                        </li>
 
-                        <li><a href="../despre.html">Despre</a></li>
-                        <li><a href="tel: +40724770007">0724 77 00 07</a></li>
+                        <li class="navbar-item-md gp-switch"><a href="../meniu/pizza.html">Pizza</a></li>
+                        <li class="navbar-item-md gp-switch"><a href="../meniu/piadine.html">Piadine</a></li>
+                        <li class="navbar-item-md gp-switch"><a class="active">Salate</a></li>
+                        <li class="navbar-item-md gp-switch"><a href="../meniu/paste.html">Paste</a></li>
+                        <li class="navbar-item-md gp-switch"><a href="../meniu/platouri.html">Platouri</a></li>
+                        <li class="navbar-item-md"><a href="../despre.html">Despre</a></li>
+                        <li class="navbar-item-md gp-switch" id="mobile-call"><a>Sun&#259;-ne</a></li>
+                        <li class="navbar-item-md gp-switch-tel" id="mobile-menu"><a>Meniu</a></li>
+                        <li class="navbar-item-md gp-switch-tel"><a href="tel: +40724770007">0724 77 00 07</a></li>
+                        <li class="navbar-item-md gp-switch-tel"><a href="tel: +40767074848">0767 07 48 48</a></li>
+                        <li class="navbar-item-md gp-switch-tel"><a href="tel: +40745506699">0745 50 66 99</a></li>
+
                         <!-- <li><a href="#gp-about-us">ABOUT US</a></li> -->
                     </ul>
                 </div>
@@ -103,17 +120,21 @@
                         <div class="col-md-12 no-padding text-center" style="font-weight: bold; margin-bottom: 16px;">
                             <div class="col-md-4 column-footer">
                                 <h2 style="font-weight: bold;">Program</h2>
+                                <p class="footer-item-md"><a><span><br></span></a></p>
                                 <p><span class="fa fa-clock-o"></span> Zilnic: 10 - 22</p>
                                 <p>Weekend: 10 - 23</p>
                             </div>
                             <div class="col-md-4 column-footer">
                                 <h2 style="font-weight: bold;">Contact</h2>
                                 <p><a href="tel: +40724770007"><span class="fa fa-phone"></span> 0724 77 00 07</a></p>
+                                <p><a href="tel: +40767074848"><span class="fa fa-phone"></span> 0767 07 48 48</a></p>
+                                <p><a href="tel: +40745506699"><span class="fa fa-phone"></span> 0745 50 66 99</a></p>
                                 <p>contact@gardenpizza.ro</p>
                                 <!-- <p><span class="fa fa-envelope-o"></span> contact@gardenpizza.ro</p> -->
                             </div>
                             <div class="col-md-4 column-footer">
                                 <h2 style="font-weight: bold;">Adres&#259;</h2>
+                                <p class="footer-item-md"><a><span><br></span></a></p>
                                 <p><span class="fa fa-map-marker"></span> Str. Viitorului, nr. 24C</p>
                                 <p>(vis-a-vis de Piscina Noa)</p>
                             </div>
